--- a/src/index.css
+++ b/src/index.css
@@ -8,3 +8,9 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
+
+td,
+th {
+  padding: 5px;
+  border: 1px solid #fff;
+}
